playing with the arguments

--- a/notebooks/TextAugment_notebook.ipynb
+++ b/notebooks/TextAugment_notebook.ipynb
@@ -70,6 +70,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the quick brownness fox jumps over the lazy dog.'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from textaugment import Wordnet\n",
+    "v = True # enable verbs augmentation. By default is True.\n",
+    "n = False # enable nouns augmentation. By default is False.\n",
+    "runs = 1 # number of times to augment a sentence. By default is 1.\n",
+    "p = 0.5 # The probability of success of an individual trial. (0.1<p<1.0), default is 0.5. Used by Geometric distribution to selects words from a sentence.\n",
+    "\n",
+    "t_with_args = Wordnet(v=False ,n=True, p=0.9)\n",
+    "t_with_args.augment(TEST_TEXT)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
