adding more example

--- a/notebooks/Parrot_paraphrase_notebook.ipynb
+++ b/notebooks/Parrot_paraphrase_notebook.ipynb
@@ -72,9 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('the fox jumps over the lazy dog', 25)\n",
+      "('the fast brown fox jumps over the lazy dog', 18)\n",
+      "('the rapid brown fox jumps over the lazy dog', 18)\n",
+      "('the quick brown fox leaps over the lazy dog', 16)\n",
+      "('the quick brown fox jumps over the lazy dog', 13)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "PHRASE = \"The quick brown fox jumps over the lazy dog.\"\n",
