--- a/notebooks/Pegasus_paraphrase_notebook.ipynb
+++ b/notebooks/Pegasus_paraphrase_notebook.ipynb
@@ -96,7 +96,25 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACTUAL TEXT:  The quick brown fox jumps over the lazy dog.\n",
+      "The dog is lazy and the quick brown fox jumps over it.\n",
+      "The brown fox jumps over the lazy dog.\n",
+      "The brown fox is jumping over the lazy dog.\n",
+      "A quick brown fox jumps over a lazy dog.\n",
+      "The dog is lazy and the quick brown fox jumps over him.\n",
+      "The dog is lazy and the brown fox jumps over it.\n",
+      "The dog is lazy and the fox jumps over it.\n",
+      "The fox jumps over the dog.\n",
+      "The fox jumps over the lazy dog.\n",
+      "The dog is lazy and the brown fox jumps over him.\n"
+     ]
+    }
+   ],
    "source": [
     "input_text = \"The quick brown fox jumps over the lazy dog.\"\n",
     "\n",
